[sdist]
formats=gztar

[bdist_wheel]
universal=1

[metadata]
name = bp-winpaths
version      = attr: winpaths.__version__
description = Retrieves common Windows system paths as Unicode strings.
;long-description = file: readme.rst
url = https://github.com/blindpandas/bp-winpaths
author       = Blind Pandas Team (original: Ryan Ginstrom)
author-email = info@blindpandas.com
license      = MIT
keywords     = os path system
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Operating System :: OS Independent
  License :: OSI Approved :: MIT License
  Topic :: Software Development :: Libraries
  Natural Language :: English
  Programming Language :: Python :: 3

[options]
zip_safe = false
packages = find:

[options.packages.find]
where=.
